[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipyketcher"
license = { file = "LICENSE" }
version = "0.1.0"
dependencies = ["anywidget"]
description = "Ketcher editor as anywidget"
readme = "README.md"

[project.urls]
Home = "https://github.com/Jhsmit/ipyketcher/"

# For projects not using `uv`, you can install these development dependencies with:
# `pip install -e ".[dev]"`
# If you're using `uv` for development, feel free to remove this section.
[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab"]


[tool.hatch.build]
only-packages = true
artifacts = ["src/ipyketcher/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/ipyketcher/static/widget.js"]
skip-if-exists = ["src/ipyketcher/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
